# zetjsoncpp

./: .cproject  .gitignore  .project  CBaseParser.cpp  CBaseParser.h  CBoolean.cpp  CBoolean.h  CBuffer.h  CCommon.h  CFile.cpp  CFile.h  CFunctor.h  CHANGELOG.md  CLog.cpp  CLog.h  CMakeLists.txt  CNumber.cpp  CParser.h  CParserBase.cpp  CParserBase.h  CParserJson.cpp  CParserJson.cxx  CParserJson.h  CParserJson.inc  CParserVar.cpp  CParserVar.h  CString.cpp  CString.h  CStringUtils.cpp  CStringUtils.h  CZetJsonCppUtils.cpp  CZetJsonCppUtils.h  HISTORY  HISTORY.md  LICENSE  Parser.h  ParserBase.cpp  ParserBase.h  ParserJson.cpp  ParserJson.h  (+21 more)
jsonvar/: JsonVar.cpp  JsonVar.h  JsonVarBoolean.h  JsonVarMap.h  JsonVarMapBoolean.h  JsonVarMapNumber.h  JsonVarMapObject.h  JsonVarMapString.h  JsonVarNamed.h  JsonVarNumber.h  JsonVarObject.cpp  JsonVarObject.h  JsonVarString.h  JsonVarVector.h  JsonVarVectorBoolean.h  JsonVarVectorNumber.h  JsonVarVectorObject.h  JsonVarVectorString.h
parser/: Array.h  Boolean.h  BooleanArray.h  Number.h  NumberArray.h  Parser.h  ParserBase.h  ParserVar.cpp  ParserVar.h  ParserVarNamed.h  PropertyGroup.h  PropertyGroupArray.h  String.h  StringArray.h  WString.h  WStringArray.h  ZetJsonCpp.h
parser_var/: CDinamicVector.h  CParserVar.cpp  CParserVar.h  CParserVar.inc  CParserVarArrayBool.h  CParserVarArrayNumber.h  CParserVarArrayPropertyGroup.h  CParserVarArrayString.h  CParserVarBoolArray.h  CParserVarBoolean.h  CParserVarNamed.h  CParserVarNumber.h  CParserVarNumberArray.h  CParserVarPropertyGroup.h  CParserVarPropertyGroupArray.h  CParserVarString.h  CParserVarStringArray.h  DinamicVector.h  ParserVar.cpp  ParserVar.h  ParserVar.inc  ParserVarBoolArray.h  ParserVarBoolean.h  ParserVarNamed.h  ParserVarNumber.h  ParserVarNumberArray.h  ParserVarPropertyGroup.h  ParserVarPropertyGroupArray.h  ParserVarString.h  ParserVarStringArray.h
src/: CMakeLists.txt  deserialize_exception.h  exception.h  zetjsoncpp.h  zetjsoncpp.tcc  zetjsoncpp_deserializer.cpp  zetjsoncpp_serializer.cpp
src/jsonvar/: ArrayBooleanJsonVar.h  ArrayJsonVar.h  ArrayNumberJsonVar.h  ArrayObjectJsonVar.h  ArrayStringJsonVar.h  BooleanJsonVar.h  JsonVar.cpp  JsonVar.h  JsonVarBoolean.h  JsonVarMap.h  JsonVarMapNumber.h  JsonVarNamed.h  JsonVarObject.cpp  JsonVarObject.h  JsonVarVectorNumber.h  JsonVarVectorObject.h  JsonVarVectorString.h  MapArrayStringJsonVar.h  MapBooleanJsonVar.h  MapJsonVar.h  MapNumberJsonVar.h  MapObjectJsonVar.h  MapStringJsonVar.h  NamedJsonVar.h  NumberJsonVar.h  ObjectJsonVar.cpp  ObjectJsonVar.h  StringJsonVar.h
src/test/: test.cpp  test_file.cpp
src/util/: zj_file.cpp  zj_file.h  zj_path.cpp  zj_path.h  zj_strutils.cpp  zj_strutils.h  zj_util.cpp  zj_util.h
src/utils/: file_utils.cpp  file_utils.h  path_utils.cpp  path_utils.h  string_utils.cpp  string_utils.h  zj_utils.cpp  zj_utils.h
test/: json_test.cpp  json_test_operators.cpp  json_test_parse.cpp  languages.json  test.cpp  test.json  test_array.json  test_array_object.cpp  test_boolean.cpp  test_file.cpp  test_file.json  test_json_var_number.cpp  test_json_var_vector_object.cpp  test_map.cpp  test_map.json  test_number.cpp  test_object.cpp  test_object.json  test_string.cpp
util/: File.cpp  File.h  Path.cpp  Path.h  StrUtils.cpp  StrUtils.h  ZJ_IO.cpp  ZJ_IO.h  ZJ_Path.cpp  ZJ_Path.h  ZJ_StrUtils.h  ZS_StrUtils.cpp  io.cpp  string.h  zj_io.cpp  zj_io.h  zj_path.h  zj_string.cpp  zj_string.h  zj_string_utils.cpp  zj_string_utils.h  zj_strutils.cpp  zj_strutils.h
utils/: path.h  string.cpp
var/: Array.h  ArrayBoolean.h  ArrayNumber.h  ArrayObject.h  ArrayString.h  Boolean.h  CBoolean.cpp  CNumber.cpp  CNumber.h  CString.cpp  CString.h  Number.h  Object.cpp  Object.h  ParserVar.cpp  ParserVar.h  ParserVarNamed.h  String.h  ZJ_Boolean.cpp  ZJ_Boolean.h  ZJ_Number.cpp  ZJ_Number.h  ZJ_String.cpp  ZJ_String.h
